# sub-converter

./: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
src/: error.rs  merge.rs
src/emit/: sing_box.rs
src/ir/: subscription.rs
src/parse/uri/: mod.rs  ss.rs  trojan.rs
src/template/: mod.rs
sub-converter/: Cargo.toml  README.md
sub-converter-cli/: Cargo.toml
sub-converter-cli/src/: args.rs  main.rs  source.rs  template.rs
sub-converter-worker/: API.md  Cargo.toml
sub-converter-worker/src/: lib.rs
sub-converter-worker/src/route/: mod.rs  profile.rs  rules.rs  template.rs
sub-converter/src/: api.rs  lib.rs  merge.rs
sub-converter/src/emit/: clash.rs  mod.rs  sing_box.rs
sub-converter/src/formats/: clash.rs  mod.rs  sing_box.rs
sub-converter/src/ir/: mod.rs  node.rs  subscription.rs
sub-converter/src/parse/: clash.rs  mod.rs  sing_box.rs
sub-converter/src/parse/uri/: trojan.rs
sub-converter/src/template/: mod.rs
sub-converter/tests/: api_merge.rs  emit.rs  parse.rs  uri.rs
templates/: clash-example.yaml  clash-simple.yaml  singbox-example.json
tests/: api_merge.rs  parse.rs
