[package]
name = "sub-converter"
version = "0.1.0"
edition = "2024"
authors = ["themanforfree@gmail.com"]
description = "A sub converter"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
percent-encoding = "2.3"
base64 = "0.22"
thiserror = "2.0.17"
