[workspace]
members = ["sub-converter", "sub-converter-cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["themanforfree@gmail.com"]
license = "MIT"

[workspace.dependencies]
# 共同依赖
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = { version = "0.9", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
