[package]
name = "sub-converter-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for sub-converter"
license.workspace = true

[dependencies]
sub-converter = { path = "../sub-converter" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
