[package]
name = "sub-converter-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", default-features = false, features = [
    'http',
    'axum',
] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["query", "macros"] }
tower-service = "0.3.3"
serde = { workspace = true, default-features = false }
serde_urlencoded = { version = "0.7.1", default-features = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
base64 = { workspace = true }
sub-converter = { path = "../sub-converter" }
js-sys = { version = "0.3" }
