[package]
name = "sub-converter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A sub converter library"
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.5"
percent-encoding = "2.3"
base64 = "0.22"
thiserror = "2.0.17"
