[package]
name = "sub-converter"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A sub converter library"
license.workspace = true
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
url = { version = "2.5", default-features = false }
percent-encoding = { version = "2.3", default-features = false, features = [
    "alloc",
] }
thiserror = { version = "2.0.17", default-features = false }
